k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: university-reports
  labels:
    name: university-reports
