k8s/base/service-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-auth
  namespace: university-reports
  labels:
    app: service-auth
spec:
  ports:
    - port: 50051
      targetPort: 50051
      protocol: TCP
  selector:
    app: service-auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-auth
  namespace: university-reports
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-auth
  template:
    metadata:
      labels:
        app: service-auth
    spec:
      containers:
        - name: service-auth
          image: university-reports-creator/service-auth:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
          livenessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:50051"]
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:50051"]
            initialDelaySeconds: 5
            periodSeconds: 10
