k8s/base/service-document.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-document
  namespace: university-reports
  labels:
    app: service-document
spec:
  ports:
    - port: 50052
      targetPort: 50052
      protocol: TCP
  selector:
    app: service-document
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-document
  namespace: university-reports
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-document
  template:
    metadata:
      labels:
        app: service-document
    spec:
      containers:
        - name: service-document
          image: university-reports-creator/service-document:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50052
          livenessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:50052"]
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:50052"]
            initialDelaySeconds: 5
            periodSeconds: 10
