k8s/base/service-files.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-files
  namespace: university-reports
  labels:
    app: service-files
spec:
  ports:
    - port: 50053
      targetPort: 50053
      protocol: TCP
  selector:
    app: service-files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-files
  namespace: university-reports
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-files
  template:
    metadata:
      labels:
        app: service-files
    spec:
      containers:
        - name: service-files
          image: university-reports-creator/service-files:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50053
          livenessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:50053"]
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            exec:
              command: ["grpc_health_probe", "-addr=:50053"]
            initialDelaySeconds: 5
            periodSeconds: 10
