k8s/base/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gateway
  namespace: university-reports
  labels:
    app: service-gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: service-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-gateway
  namespace: university-reports
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-gateway
  template:
    metadata:
      labels:
        app: service-gateway
    spec:
      containers:
        - name: service-gateway
          image: university-reports-creator/service-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
